--- a/WebServer/data/config.json
+++ b/WebServer/data/config.json
@@ -3,7 +3,5 @@
 	"Notificaciones": "015",
 	"CantidadHorasLuz": "02",
 	"HoraInicioLuz": "21",
-	"PH_aceptable": "07",
-	"SSID": "PolkoNet",
-	"Password": "polkotite8308!"
+	"PH_aceptable": "07"
 }
