--- a/WebServer/data/config.json
+++ b/WebServer/data/config.json
@@ -1,6 +1,6 @@
 {
 	"idDispositivo": "12625275",
-	"Notificaciones": "015",
+	"Power": "0",
 	"CantidadHorasLuz": "02",
 	"HoraInicioLuz": "21",
 	"PH_aceptable": "07"
